[tool.poetry]
name = "rewinder"
version = "0.1.0"
description = ""
authors = ["Bharat Kalluri <bharatkalluri@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rewinder = "rewinder.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
